k8s-test/ingress-tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waldur-homeport-test-${CI_MERGE_REQUEST_ID}
  labels:
    name: waldur-homeport-test-${CI_MERGE_REQUEST_ID}
  annotations:
    cert-manager.io/cluster-issuer: vault-hpc-issuer
    traefik.ingress.kubernetes.io/router.middlewares: waldur-helm-test-homeport-test-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: helm-testing.waldur.com
    http:
      paths:
      - pathType: Prefix
        path: "/${CI_MERGE_REQUEST_ID}"
        backend:
          service:
            name: waldur-homeport-test-${CI_MERGE_REQUEST_ID}
            port:
              number: 80
  tls:
  - hosts:
    - helm-testing.waldur.com
    secretName: helm-testing.waldur.com
